# deep-strat

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  check_chroma.py  knowledge_agent.py  knowledge_base.db  knowledge_data.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_agent.py
.github/workflows/: ci.yml
deep_strat/: __init__.py  app.py  check_data.py  core.py  knowledge_base.db  rag_api.py  rag_qa.py  search_api.py  test_rag.py
deep_strat/templates/: index.html
docs/: voyage_ai_setup.md
scripts/: check_voyage_api.py  fix_chromadb.py  rebuild_vectordb.py  test_voyage_embeddings.py
solution-connector/: README.md  package-lock.json  package.json
solution-connector/src/: App.css  App.js
solution-connector/src/components/: Chatbox.js  Header.js
solution-connector/src/pages/: CompanyPage.js  HomePage.js  IndustriesPage.js  IndustryDetailPage.js  ServicesPage.js  SolutionDetailPage.js  SolutionsPage.js
tests/: test_deep_strat.py
tests/stage1/: test_basic_rag.py
